<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Space
        android:id="@+id/space1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >
        
        <ImageView
        android:id="@+id/iv_mileage_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/mileage_auto" 
        android:contentDescription="@string/title_carpc_mileage"/>
    
    <ImageView
        android:id="@+id/iv_mileage_autosdu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_mileage_auto"
        android:layout_alignRight="@+id/iv_mileage_auto"
        android:layout_marginRight="@dimen/mileage_autosdu_right"
        android:src="@drawable/mileage_sdu"
        android:contentDescription="@string/title_carpc_mileage" />
    
    
    <TextView
        android:id="@+id/iv_mileage_autotrip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_mileage_auto"
        android:layout_toRightOf="@+id/iv_mileage_auto"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/text_mileage_auto" 
        android:textColor="@android:color/white"/>
    

    <TextView
        android:id="@+id/iv_trip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/trip1_top"
        android:textSize="@dimen/trip_size"
        android:textStyle="bold"
        android:text="@string/title_trip2" 
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/iv_tripauto_avgfuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iv_mileage_auto"
        android:layout_below="@+id/iv_trip2"
        android:layout_marginLeft="@dimen/avgfuel_left"
        android:layout_marginTop="@dimen/avgfuel_top"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/text_trip1_avgfuel" 
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/iv_tripauto_avgspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iv_tripauto_avgfuel"
        android:layout_below="@+id/iv_tripauto_avgfuel"
        android:layout_marginTop="@dimen/avgfuel_top"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/text_trip1_avgspeed"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/iv_tripauto_drivertime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_mileage_auto"
        android:layout_alignTop="@+id/iv_tripauto_avgfuel"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/drivertime_left"
        android:text="@string/tetx_trip1_drivertime" 
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/iv_tripauto_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iv_tripauto_drivertime"
        android:layout_alignTop="@+id/iv_tripauto_avgspeed"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/tetx_trip1_count"
        android:textColor="@android:color/white" />

    </RelativeLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>