<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/img_help4_hiworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/hiworld_log_parentright"
        android:layout_marginTop="@dimen/hiworld_mainlog_parenttop"
        android:src="@drawable/ico_hiworld" 
        android:contentDescription="@string/app_name"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_alignTop="@+id/img_help4_hiworld"
        android:layout_marginLeft="@dimen/help1_parentleft"
        android:layout_marginRight="@dimen/help1_parentleft" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_size"
                android:text="@string/help4_title"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/server_copyright_size" 
                android:isScrollContainer="true"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/help4_text"/>

        </LinearLayout>
    </ScrollView>
   

    
    <Button
        android:id="@+id/btn_help4_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/server_copyright_size" 
        android:text="@string/help4_btn_home" 
        android:visibility="gone"/>

</RelativeLayout>
